Making mobile friendly
Making mobile friendly

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -959,7 +959,7 @@
 					<key>page16 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -968,11 +968,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ayvBXsuKQRkx
-								piM/Ndbefg==
+								66+EzmJpWbaH
+								IFcX4ykuAg==
 								</data>
 								<key>Size</key>
-								<integer>44887</integer>
+								<integer>49975</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -1034,25 +1034,35 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
-							<key>index_files/stacks-image-7bd4795-500x428.png</key>
+							<key>index_files/stacks-image-50acd30-500x428.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								J8KuaywhtoGv
-								IOkZ9Ele4w==
+								62fzR4BV8IeW
+								g+4JD74Z/Q==
 								</data>
 								<key>Size</key>
-								<integer>162077</integer>
+								<integer>45578</integer>
+							</dict>
+							<key>index_files/stacks-image-50acd30-500x428@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								H8N3C4foo14j
+								ceJ3KiLEqA==
+								</data>
+								<key>Size</key>
+								<integer>78092</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+FibbI5I7vU/
-								cFN25AcJfA==
+								w4okl28KdDbU
+								pb2ZBpLrHg==
 								</data>
 								<key>Size</key>
-								<integer>130364</integer>
+								<integer>141657</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.js</key>
 							<dict>
@@ -1999,7 +2009,7 @@
 					<key>page34 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2078,11 +2088,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								a8WCpnkw7px1
-								Vuadn0h9IA==
+								maX7sytbAIsU
+								b5uLokZVhg==
 								</data>
 								<key>Size</key>
-								<integer>134342</integer>
+								<integer>134334</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -2098,11 +2108,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								c4Vk8X/jw0Wu
-								7QtQ6d/gTQ==
+								U2NKrOaIx5LN
+								Y1D+KoAeyg==
 								</data>
 								<key>Size</key>
-								<integer>45994</integer>
+								<integer>45636</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2115,7 +2125,7 @@
 					<key>page35 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2174,11 +2184,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QkbMNbl5LYZ0
-								CHpHb/Ce7g==
+								CqO/NBhPWDYh
+								BJfcj8Yb3w==
 								</data>
 								<key>Size</key>
-								<integer>138453</integer>
+								<integer>134178</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -2194,11 +2204,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fxz0msd09abb
-								ihcHOtskfA==
+								4iFGs36i29UJ
+								b73oZGVzOA==
 								</data>
 								<key>Size</key>
-								<integer>47099</integer>
+								<integer>44593</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2211,7 +2221,7 @@
 					<key>page36 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2290,11 +2300,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jI5Zybum8q8A
-								u+fZu+2rpw==
+								OcCdw0i+79c9
+								HQIECDuxBw==
 								</data>
 								<key>Size</key>
-								<integer>138076</integer>
+								<integer>136794</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -2310,11 +2320,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VwUAtgJaQ+Qh
-								DVaV43A66g==
+								zI+mR1f706af
+								N9ybOOJyIw==
 								</data>
 								<key>Size</key>
-								<integer>48332</integer>
+								<integer>47628</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2327,7 +2337,7 @@
 					<key>page37 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2376,11 +2386,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iXTtYMYbyJUV
-								tSV62aI4hg==
+								3e71RgRF7rZc
+								Y3sb76ryXA==
 								</data>
 								<key>Size</key>
-								<integer>126618</integer>
+								<integer>128335</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -2396,11 +2406,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								i6VS78j6U0wY
-								MpnnpiK8MA==
+								txo8D29xoLQq
+								GUhbmUzxmA==
 								</data>
 								<key>Size</key>
-								<integer>37892</integer>
+								<integer>38659</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2413,7 +2423,7 @@
 					<key>page38 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2442,11 +2452,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ftkr8UW1DjGM
-								fNh8/krh3w==
+								Lg3CRrkWvfPV
+								bGq5OQuhjA==
 								</data>
 								<key>Size</key>
-								<integer>125407</integer>
+								<integer>128303</integer>
 							</dict>
 							<key>files/stacks_page_page38.js</key>
 							<dict>
@@ -2462,11 +2472,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gqvPOc+ntZiu
-								pqBxLG1Oew==
+								kBDDCEd6LJbS
+								DmMwxdm6Vw==
 								</data>
 								<key>Size</key>
-								<integer>37988</integer>
+								<integer>39333</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -2913,7 +2923,7 @@
 					<key>page45 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -2992,11 +3002,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1ybe5R4kxOJG
-								7zVdO6lCjw==
+								sN0/ufn5KIcN
+								UZw+8ypIjQ==
 								</data>
 								<key>Size</key>
-								<integer>128074</integer>
+								<integer>125145</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -3012,11 +3022,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0PPqGDbJd9am
-								kjf/uUpx2Q==
+								9sdZFq5narSD
+								0icL/7/X+g==
 								</data>
 								<key>Size</key>
-								<integer>41142</integer>
+								<integer>39354</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3029,7 +3039,7 @@
 					<key>page46 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3073,6 +3083,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-2db60e9-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-2db60e9-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
 							</dict>
 							<key>files/stacks-image-469645b-98x150.png</key>
 							<dict>
@@ -3154,6 +3184,46 @@
 								<key>Size</key>
 								<integer>10312</integer>
 							</dict>
+							<key>files/stacks-image-810c5f5-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-810c5f5-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
+							<key>files/stacks-image-9fc72ff-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-9fc72ff-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -3168,11 +3238,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								AggU/2v3OUHH
-								MAePzxwHNQ==
+								i0VjUpF2Eq5T
+								GOug5Yy0Lg==
 								</data>
 								<key>Size</key>
-								<integer>136473</integer>
+								<integer>142827</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -3198,11 +3268,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sSCbesHelcPN
-								3I/dj6bhCQ==
+								wimYwiwUGivP
+								G638SuarrA==
 								</data>
 								<key>Size</key>
-								<integer>59498</integer>
+								<integer>63223</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3481,11 +3551,21 @@
 					<key>page48 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
+							<key>files/pin.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xcy6OK5dO/8V
+								xnwWql1CCA==
+								</data>
+								<key>Size</key>
+								<integer>3950</integer>
+							</dict>
 							<key>files/small_109809.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -3515,6 +3595,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-3edeb52-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-3edeb52-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
 							</dict>
 							<key>files/stacks-image-4d937f0-100x150.jpg</key>
 							<dict>
@@ -3566,6 +3666,26 @@
 								<key>Size</key>
 								<integer>12547</integer>
 							</dict>
+							<key>files/stacks-image-810c5f5-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-810c5f5-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks-image-86b04b6-296x300.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3576,35 +3696,75 @@
 								<key>Size</key>
 								<integer>83792</integer>
 							</dict>
+							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3YW7fsJffz3y
+								xSIicOAdcA==
+								</data>
+								<key>Size</key>
+								<integer>553274</integer>
+							</dict>
+							<key>files/stacks-image-b2e3b8a-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-b2e3b8a-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks_page_page48.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								wZDZikx/6w6Y
-								6kWRKYKaBA==
+								LUUbsUnLGXSX
+								FOzXlhTIGg==
 								</data>
 								<key>Size</key>
-								<integer>133189</integer>
+								<integer>143901</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Wu3u+bGawIx1
-								rSEQ7aA7Ew==
+								8xIi1J/c7P2b
+								hNIyNXXC+w==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>31970</integer>
+							</dict>
+							<key>files/stacks_page_page48.php</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								s0m9/PzD72Xp
+								m3JBkrZfzQ==
+								</data>
+								<key>Size</key>
+								<integer>922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ixy4vYGVoBf2
-								HUbaopt6iw==
+								17Vx2Mo3dLlw
+								FcN4RNrofQ==
 								</data>
 								<key>Size</key>
-								<integer>49300</integer>
+								<integer>61240</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -3617,7 +3777,7 @@
 					<key>page49 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -3712,6 +3872,26 @@
 								<key>Size</key>
 								<integer>330970</integer>
 							</dict>
+							<key>files/stacks-image-91ace9a-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-91ace9a-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks-image-a63dce2-1200x796.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -3752,6 +3932,46 @@
 								<key>Size</key>
 								<integer>10312</integer>
 							</dict>
+							<key>files/stacks-image-cfb5234-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-cfb5234-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
+							<key>files/stacks-image-e712d99-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-e712d99-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks-image-fecc660-98x150.png</key>
 							<dict>
 								<key>Digest</key>
@@ -3766,11 +3986,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bJr0o+idubBq
-								kfGHzStfjA==
+								um7bEBWqMRxM
+								JUBXB+jtrA==
 								</data>
 								<key>Size</key>
-								<integer>135591</integer>
+								<integer>144551</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -3786,11 +4006,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vqHtrQnQsbXA
-								CucdJ6pPFQ==
+								sGDSA/xcDKff
+								tcaG9kcvgw==
 								</data>
 								<key>Size</key>
-								<integer>63180</integer>
+								<integer>69660</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4257,7 +4477,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-16T16:18:06Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4306,11 +4526,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								dgw08SHrQEAD
-								3gUmQ3Lk0g==
+								sEugrIPr1WVW
+								E/JWybaOdA==
 								</data>
 								<key>Size</key>
-								<integer>2785</integer>
+								<integer>2753</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4323,7 +4543,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-16T16:18:06Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4742,11 +4962,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								EjncAfH5HdvS
-								uZMIboj+Sg==
+								/qgL2e959gOt
+								7ZQba5VZVw==
 								</data>
 								<key>Size</key>
-								<integer>199007</integer>
+								<integer>249636</integer>
 							</dict>
 							<key>icon.png</key>
 							<dict>
@@ -5352,21 +5572,21 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1En2lSt2+6wN
-								jg5YYKqSvQ==
+								0kfQW53zIY14
+								RUALvUuVSA==
 								</data>
 								<key>Size</key>
-								<integer>2804</integer>
+								<integer>2727</integer>
 							</dict>
 							<key>stacks.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3ag0AvH8MaFQ
-								YpFqzC1nsw==
+								Lu9CNVU8s0vF
+								GG1wbXWGaQ==
 								</data>
 								<key>Size</key>
-								<integer>2051</integer>
+								<integer>2003</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
