--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QkbMNbl5LYZ0
-								CHpHb/Ce7g==
+								CqO/NBhPWDYh
+								BJfcj8Yb3w==
 								</data>
 								<key>Size</key>
-								<integer>138453</integer>
+								<integer>134178</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								fxz0msd09abb
-								ihcHOtskfA==
+								4iFGs36i29UJ
+								b73oZGVzOA==
 								</data>
 								<key>Size</key>
-								<integer>47099</integer>
+								<integer>44593</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
