--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -62,11 +62,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Ftkr8UW1DjGM
-								fNh8/krh3w==
+								Lg3CRrkWvfPV
+								bGq5OQuhjA==
 								</data>
 								<key>Size</key>
-								<integer>125407</integer>
+								<integer>128303</integer>
 							</dict>
 							<key>files/stacks_page_page38.js</key>
 							<dict>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								gqvPOc+ntZiu
-								pqBxLG1Oew==
+								kBDDCEd6LJbS
+								DmMwxdm6Vw==
 								</data>
 								<key>Size</key>
-								<integer>37988</integer>
+								<integer>39333</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
