--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								1ybe5R4kxOJG
-								7zVdO6lCjw==
+								sN0/ufn5KIcN
+								UZw+8ypIjQ==
 								</data>
 								<key>Size</key>
-								<integer>128074</integer>
+								<integer>125145</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								0PPqGDbJd9am
-								kjf/uUpx2Q==
+								9sdZFq5narSD
+								0icL/7/X+g==
 								</data>
 								<key>Size</key>
-								<integer>41142</integer>
+								<integer>39354</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
