--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,11 +33,21 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
 						<dict>
+							<key>files/pin.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								xcy6OK5dO/8V
+								xnwWql1CCA==
+								</data>
+								<key>Size</key>
+								<integer>3950</integer>
+							</dict>
 							<key>files/small_109809.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -67,6 +77,26 @@
 								</data>
 								<key>Size</key>
 								<integer>68548</integer>
+							</dict>
+							<key>files/stacks-image-3edeb52-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-3edeb52-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
 							</dict>
 							<key>files/stacks-image-4d937f0-100x150.jpg</key>
 							<dict>
@@ -118,6 +148,26 @@
 								<key>Size</key>
 								<integer>12547</integer>
 							</dict>
+							<key>files/stacks-image-810c5f5-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-810c5f5-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks-image-86b04b6-296x300.png</key>
 							<dict>
 								<key>Digest</key>
@@ -128,35 +178,75 @@
 								<key>Size</key>
 								<integer>83792</integer>
 							</dict>
+							<key>files/stacks-image-a4d3338-1198x798.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								3YW7fsJffz3y
+								xSIicOAdcA==
+								</data>
+								<key>Size</key>
+								<integer>553274</integer>
+							</dict>
+							<key>files/stacks-image-b2e3b8a-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-b2e3b8a-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks_page_page48.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								wZDZikx/6w6Y
-								6kWRKYKaBA==
+								LUUbsUnLGXSX
+								FOzXlhTIGg==
 								</data>
 								<key>Size</key>
-								<integer>133189</integer>
+								<integer>143901</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Wu3u+bGawIx1
-								rSEQ7aA7Ew==
+								8xIi1J/c7P2b
+								hNIyNXXC+w==
 								</data>
 								<key>Size</key>
-								<integer>28346</integer>
+								<integer>31970</integer>
+							</dict>
+							<key>files/stacks_page_page48.php</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								s0m9/PzD72Xp
+								m3JBkrZfzQ==
+								</data>
+								<key>Size</key>
+								<integer>922</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								ixy4vYGVoBf2
-								HUbaopt6iw==
+								17Vx2Mo3dLlw
+								FcN4RNrofQ==
 								</data>
 								<key>Size</key>
-								<integer>49300</integer>
+								<integer>61240</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
