--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -128,6 +128,26 @@
 								<key>Size</key>
 								<integer>330970</integer>
 							</dict>
+							<key>files/stacks-image-91ace9a-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-91ace9a-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks-image-a63dce2-1200x796.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -168,6 +188,46 @@
 								<key>Size</key>
 								<integer>10312</integer>
 							</dict>
+							<key>files/stacks-image-cfb5234-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-cfb5234-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
+							<key>files/stacks-image-e712d99-98x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								uIa+ZpRMODfY
+								8L1symw+qA==
+								</data>
+								<key>Size</key>
+								<integer>6246</integer>
+							</dict>
+							<key>files/stacks-image-e712d99-98x98@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								oL3dMLrPIItY
+								AkFFEoSKHQ==
+								</data>
+								<key>Size</key>
+								<integer>7818</integer>
+							</dict>
 							<key>files/stacks-image-fecc660-98x150.png</key>
 							<dict>
 								<key>Digest</key>
@@ -182,11 +242,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								bJr0o+idubBq
-								kfGHzStfjA==
+								um7bEBWqMRxM
+								JUBXB+jtrA==
 								</data>
 								<key>Size</key>
-								<integer>135591</integer>
+								<integer>144551</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -202,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								vqHtrQnQsbXA
-								CucdJ6pPFQ==
+								sGDSA/xcDKff
+								tcaG9kcvgw==
 								</data>
 								<key>Size</key>
-								<integer>63180</integer>
+								<integer>69660</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
