--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								jI5Zybum8q8A
-								u+fZu+2rpw==
+								OcCdw0i+79c9
+								HQIECDuxBw==
 								</data>
 								<key>Size</key>
-								<integer>138076</integer>
+								<integer>136794</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								VwUAtgJaQ+Qh
-								DVaV43A66g==
+								zI+mR1f706af
+								N9ybOOJyIw==
 								</data>
 								<key>Size</key>
-								<integer>48332</integer>
+								<integer>47628</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
