--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								iXTtYMYbyJUV
-								tSV62aI4hg==
+								3e71RgRF7rZc
+								Y3sb76ryXA==
 								</data>
 								<key>Size</key>
-								<integer>126618</integer>
+								<integer>128335</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								i6VS78j6U0wY
-								MpnnpiK8MA==
+								txo8D29xoLQq
+								GUhbmUzxmA==
 								</data>
 								<key>Size</key>
-								<integer>37892</integer>
+								<integer>38659</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
