--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-20T22:15:38Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								ayvBXsuKQRkx
-								piM/Ndbefg==
+								66+EzmJpWbaH
+								IFcX4ykuAg==
 								</data>
 								<key>Size</key>
-								<integer>44887</integer>
+								<integer>49975</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -108,25 +108,35 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
-							<key>index_files/stacks-image-7bd4795-500x428.png</key>
+							<key>index_files/stacks-image-50acd30-500x428.jpg</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								J8KuaywhtoGv
-								IOkZ9Ele4w==
+								62fzR4BV8IeW
+								g+4JD74Z/Q==
 								</data>
 								<key>Size</key>
-								<integer>162077</integer>
+								<integer>45578</integer>
+							</dict>
+							<key>index_files/stacks-image-50acd30-500x428@2x.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								H8N3C4foo14j
+								ceJ3KiLEqA==
+								</data>
+								<key>Size</key>
+								<integer>78092</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+FibbI5I7vU/
-								cFN25AcJfA==
+								w4okl28KdDbU
+								pb2ZBpLrHg==
 								</data>
 								<key>Size</key>
-								<integer>130364</integer>
+								<integer>141657</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.js</key>
 							<dict>
